# python-project-lvl1

./: README.md  pyproject.toml  setup.cfg
brain_games/: cli.py  engine.py  games.py
brain_games/engine/: __init__.py  engine.py
brain_games/games/: __init__.py  calc.py  even.py  game_base.py  game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
